Recompiled for Java8